Se creó con Colab

--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -37,14 +37,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 41,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 293
         },
         "id": "T3EvaeQ_INIL",
-        "outputId": "77d9d40a-3e56-475e-fa93-7c5ec1fb02b4"
+        "outputId": "7e0a7d26-6ec1-4e52-e925-43e7487046cf"
       },
       "outputs": [
         {
@@ -74,7 +74,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-32358429-5a4d-41b1-8cc9-b29d4088b8ab\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-af9c9a79-4842-44d3-8926-23642c348b17\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -189,7 +189,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-32358429-5a4d-41b1-8cc9-b29d4088b8ab')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-af9c9a79-4842-44d3-8926-23642c348b17')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -241,12 +241,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-32358429-5a4d-41b1-8cc9-b29d4088b8ab button.colab-df-convert');\n",
+              "        document.querySelector('#df-af9c9a79-4842-44d3-8926-23642c348b17 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-32358429-5a4d-41b1-8cc9-b29d4088b8ab');\n",
+              "        const element = document.querySelector('#df-af9c9a79-4842-44d3-8926-23642c348b17');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -266,8 +266,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-177a1a9b-eaef-477b-8e3a-af538f9b4580\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-177a1a9b-eaef-477b-8e3a-af538f9b4580')\"\n",
+              "<div id=\"df-94388661-15a1-457e-b725-0e6acd2a6046\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-94388661-15a1-457e-b725-0e6acd2a6046')\"\n",
               "            title=\"Suggest charts\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -386,7 +386,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-177a1a9b-eaef-477b-8e3a-af538f9b4580 button');\n",
+              "        document.querySelector('#df-94388661-15a1-457e-b725-0e6acd2a6046 button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -403,7 +403,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 1
+          "execution_count": 41
         }
       ],
       "source": [
@@ -831,22 +831,148 @@
       }
     },
     {
-      "cell_type": "code",
-      "source": [],
+      "cell_type": "markdown",
+      "source": [
+        "Calificación promedio de la tienda 1"
+      ],
       "metadata": {
-        "id": "bh3jjjJwY5MU"
+        "id": "TssbfhgnKjcl"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calificacion_promedio(calificaciones):\n",
+        "  return sum(calificaciones)//len(calificaciones)"
+      ],
+      "metadata": {
+        "id": "gQiZ7B9kLCfL"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "calificacion_tienda1 = calificacion_promedio(tienda['Calificación'])\n",
+        "print(f\"La calificación promedio de la tienda 1 es de {calificacion_tienda1}\")"
+      ],
       "metadata": {
-        "id": "I0KkjPoTY88F"
+        "id": "bh3jjjJwY5MU",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1d326a44-7ef4-42fe-f785-0ca0f5a9da93"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La calificación promedio de la tienda 1 es de 3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calificación promedio de la tienda 2"
+      ],
+      "metadata": {
+        "id": "xHcnjIelMVYY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calificacion_tienda2 = calificacion_promedio(tienda2['Calificación'])\n",
+        "print(f\"La calificación promedio de la tienda 2 es de {calificacion_tienda2}\")"
+      ],
+      "metadata": {
+        "id": "I0KkjPoTY88F",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f6885e4e-8b31-4530-aaf7-2135c67945b7"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La calificación promedio de la tienda 2 es de 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calificación promedio de la tienda 3"
+      ],
+      "metadata": {
+        "id": "sLA5hrjYMnwZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calificacion_tienda3 = calificacion_promedio(tienda3['Calificación'])\n",
+        "print(f\"La calificación promedio de la tienda 3 es de {calificacion_tienda3}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nEHcA7FzMmbf",
+        "outputId": "0ff2b0ab-f817-45d6-c2a9-f09d2061ab1b"
+      },
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La calificación promedio de la tienda 3 es de 4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Calificación promedio de la tienda 4"
+      ],
+      "metadata": {
+        "id": "t1pJm3YEM1UB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "calificacion_tienda4 = calificacion_promedio(tienda4['Calificación'])\n",
+        "print(f\"La calificación promedio de la tienda 4 es de {calificacion_tienda4}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BljEiubBM6bz",
+        "outputId": "4f34d924-2c37-4e85-ce1c-b2329bcbac73"
+      },
+      "execution_count": 39,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "La calificación promedio de la tienda 4 es de 3\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -858,22 +984,136 @@
       }
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Productos más y menos vendidos de la tienda 1"
+      ],
+      "metadata": {
+        "id": "3DFS9w3yNwgR"
+      }
+    },
+    {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "productos_mas_vendidos = []\n",
+        "productos_menos_vendidos= []"
+      ],
       "metadata": {
         "id": "qoyjqijQZHfF"
       },
-      "execution_count": null,
+      "execution_count": 44,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "productos = pd.Series(tienda['Producto'])\n",
+        "frecuencia = productos.value_counts"
+      ],
       "metadata": {
-        "id": "0Sw3sd4IZIGW"
+        "id": "0Sw3sd4IZIGW",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 458
+        },
+        "outputId": "50418a7b-dd18-4e6c-8da3-e79548946308"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 46,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0       Asistente virtual\n",
+              "1         Mesa de comedor\n",
+              "2           Juego de mesa\n",
+              "3              Microondas\n",
+              "4        Silla de oficina\n",
+              "              ...        \n",
+              "2354            Iphone 15\n",
+              "2355            Impresora\n",
+              "2356        Juego de mesa\n",
+              "2357             Cama box\n",
+              "2358           Smartwatch\n",
+              "Name: Producto, Length: 2359, dtype: object"
+            ],
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Producto</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>Asistente virtual</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>Mesa de comedor</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>Juego de mesa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>Microondas</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>Silla de oficina</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>...</th>\n",
+              "      <td>...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2354</th>\n",
+              "      <td>Iphone 15</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2355</th>\n",
+              "      <td>Impresora</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2356</th>\n",
+              "      <td>Juego de mesa</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2357</th>\n",
+              "      <td>Cama box</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2358</th>\n",
+              "      <td>Smartwatch</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "<p>2359 rows × 1 columns</p>\n",
+              "</div><br><label><b>dtype:</b> object</label>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 46
+        }
+      ]
     },
     {
       "cell_type": "markdown",
